force-app/main/default/objects/PITS_Plan__c/PITS_Plan__c.object-meta.xml
<CustomObject>
    <label>PITS Plan</label>
    <nameField>
        <displayFormat>PITS-{0}</displayFormat>
        <label>PITS Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PITS Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>