force-app/main/default/objects/PITS_Plan__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PITS Plans</relationshipLabel>
    <relationshipName>PITS_Plans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>