force-app/main/default/objects/PITS_Plan__c/fields/Date_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Referral__c</fullName>
    <label>Date of Referral</label>
    <type>Date</type>
</CustomField>