force-app/main/default/objects/PITS_Plan__c/fields/Intervention_Type__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Type__c</fullName>
    <label>Intervention Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower Limb Botox- Unilateral</fullName>
            </value>
            <value>
                <fullName>Lower Limb Botox- Bilateral</fullName>
            </value>
            <value>
                <fullName>Upper Limb Botox- Unilateral</fullName>
            </value>
            <value>
                <fullName>Upper Limb Botox- Bilateral</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgery- Single Level</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgery- SEMLS</fullName>
            </value>
            <value>
                <fullName>UL Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Intrathecal Baclofen Pump</fullName>
            </value>
            <value>
                <fullName>Selective Dorsal Root Rhizotomy</fullName>
            </value>
            <value>
                <fullName>iREHAB- Low</fullName>
            </value>
            <value>
                <fullName>iREHAB- Medium</fullName>
            </value>
            <value>
                <fullName>iREHAB- High</fullName>
            </value>
            <value>
                <fullName>iREHAB-Communication Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>