force-app/main/default/objects/PITS_Plan__c/fields/Reason_for_early__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_early__c</fullName>
    <label>Reason for Early Completion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellations</fullName>
            </value>
            <value>
                <fullName>Progress Made</fullName>
            </value>
            <value>
                <fullName>Unexpected Readmission</fullName>
            </value>
            <value>
                <fullName>Lack of Progress</fullName>
            </value>
            <value>
                <fullName>Moved to another provider</fullName>
            </value>
            <value>
                <fullName>Moved to outpatient/inpatient</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>