force-app/main/default/objects/PITS_Plan__c/fields/Sessions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Completed__c</fullName>
    <inlineHelpText>Number of sessions completed, between 2-50 sessions</inlineHelpText>
    <label>Sessions Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>