force-app/main/default/objects/PITS_Plan__c/fields/Sessions_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Requested__c</fullName>
    <defaultValue>8</defaultValue>
    <inlineHelpText>Number of sessions requested by hospital, between 2-50 sessions.</inlineHelpText>
    <label>Sessions Requested</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>