force-app/main/default/objects/PITS_Plan__c/validationRules/Mandatory_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Sessions_Requested__c !=  Sessions_Completed__c , ISBLANK(TEXT(Reason_for_early__c)))</errorConditionFormula>
    <errorDisplayField>Reason_for_early__c</errorDisplayField>
    <errorMessage>Reasons must be filled in when sessions requested is not equal to sessions completed</errorMessage>
</ValidationRule>