force-app/main/default/objects/PITS_Plan__c/validationRules/Sessions_completed_between_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Sessions_completed_between_range</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(Sessions_Completed__c ) = false, 

OR(Sessions_Completed__c &lt; 2,Sessions_Completed__c &gt; 50)

)</errorConditionFormula>
    <errorDisplayField>Sessions_Completed__c</errorDisplayField>
    <errorMessage>Sessions completed can only be between 2-50</errorMessage>
</ValidationRule>