force-app/main/default/objects/PITS_Plan__c/validationRules/Sessions_requested_between_range.validationRule-meta.xml
<ValidationRule>
    <fullName>Sessions_requested_between_range</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Sessions_Requested__c &lt; 2,Sessions_Requested__c &gt; 50)</errorConditionFormula>
    <errorDisplayField>Sessions_Requested__c</errorDisplayField>
    <errorMessage>Sessions requested can only be between 2-50</errorMessage>
</ValidationRule>